--- a/style.css
+++ b/style.css
@@ -1,16 +1,63 @@
 .header {
-	background-image: url('images/imgheader.jpg');
-	background-attachment: local;
-	background-origin: padding-box;
-	background-size: cover;
-	min-height: 200px;
-	max-height: 300px;
+	background-image: url('images/fond02.jpg');
+	background-attachment: scroll;
+	background-origin: border-box;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	position: relative;
+}
+
+.width-95 {
+	width: 95%;
+	margin-right: auto;
+	margin-left: auto;
+	padding-right: 15px;
+	padding-left: 15px;
+	padding-top: 10px;
+}
+
+.width-20 {
+	width: 20%;
+	margin-right: auto;
+	margin-left: auto;
+	border-left-width: 1px;
+	border-right-width: 1px;
+	border-left: solid #ffffff33;
+	border-right: solid #ffffff33;
+}
+
+.textcol1 {
+	color: rgba(255, 255, 255, 0.8);
+}
+
+.width-100 {
+	width: 100%;
+	padding: 0px;
+	align-items: center;
+}
+
+.nav-item:hover {
+	background-color: rgba(255, 255, 255, 0.7);
+}
+
+.nav-item {
+	background-color: rgba(0, 0, 0, 0.5);
+	font-weight: initial;
+}
+
+.posb {
+	width: 100%;
+	
+}
+
+.spacey {
+	height: 27%;
 }
 
 .grid-cont1 {
 	display: grid;
 	width: 80%;
-	min-width: 105px;
+	min-width: 6em;
 	grid-gap: 0px;
 	grid-template-columns:repeat(7,1fr);
 	grid-template-rows:repeat(2,30px);
@@ -20,7 +67,7 @@
 .grid-cont2 {
 	display: grid;
 	width: 80%;
-	min-width: 105px;
+	min-width: 6em;
 	grid-gap: 0px;
 	grid-template-columns:repeat(7,1fr);
 	grid-template-rows:repeat(20,30px);
@@ -31,14 +78,23 @@
 
 .grid-cont3 {
 	display: grid;
-	width: 90%;
-	min-width: 105px;
+	width: 245px;
 	grid-gap: 0px;
-	grid-template-columns:repeat(1,1fr 3fr 1fr 21fr);
+	grid-template-columns:repeat(1,1fr 3fr 1fr);
 	grid-template-rows:repeat(1,30px);
 	font-weight: bold;
 	padding-bottom: 1em;
 	padding-top: 1em;
+	margin-left: 50px;
+}
+
+.grid-cont4 {
+	display: grid;
+	width: 60%;
+	min-width: 6em;
+	grid-gap: 0px;
+	grid-template-columns:repeat(5,1fr);
+	font-weight: bold;
 }
 
 .grid-cursor {
@@ -61,21 +117,23 @@
 	max-height: 90%;
 }
 
+.grid-leg {
+	max-width: 80%;
+}
+
+.grid-leg2 {
+	height: auto;
+}
+
 .grid-default {
 	cursor: default;
-	background-color: ghostwhite;
 }
 
-.grid-cont1 > div {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	overflow: hidden;
-	padding: 1px;
+h1, h2 {
+	margin-top: 10px;
 }
 
-.grid-cont2 > div {
+.grid-cont1 > div, .grid-cont2 > div, .grid-cont4 > div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
